# Resident_Manager

./: babel.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.css  App.jsx  (+1 more)
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/pocketbase/pb_data/: auxiliary.db  auxiliary.db-shm  auxiliary.db-wal  data.db
src-tauri/pocketbase/pb_data/storage/pbc_2522582908/jr0619j3q8018v8/: pic_yvr2d2r1e3.png.attrs
src-tauri/pocketbase/pb_data/storage/pbc_2522582908/jr0619j3q8018v8/thumbs_pic_yvr2d2r1e3.png/: 100x100_pic_yvr2d2r1e3.png.attrs
src-tauri/pocketbase/pb_data/storage/pbc_2522582908/l2q4puo768n7q3b/: bel_d3iqzoytq0.jpg.attrs
src-tauri/pocketbase/pb_data/storage/pbc_2522582908/l2q4puo768n7q3b/thumbs_bel_d3iqzoytq0.jpg/: 100x100_bel_d3iqzoytq0.jpg.attrs
src-tauri/pocketbase/pb_migrations/: 1734267441_created_residents.js  1734267555_created_rooms.js  1734267711_updated_residents.js  1734267747_updated_residents.js  1734267858_updated_rooms.js  1734268137_updated_residents.js  1734268158_updated_rooms.js  1734270190_updated_residents.js  1734270244_updated_residents.js  1734270262_updated_residents.js  1734271074_updated_residents.js  1734276847_updated_residents.js  1734276858_deleted_rooms.js  1734277363_updated_rooms.js  1734277440_updated_rooms.js  1734278539_updated_residents.js  1734279220_updated_rooms.js  1734279491_updated_rooms.js  1734388457_updated_rooms.js  1734388501_updated_rooms.js  1734722739_updated_rooms.js
src-tauri/src/: api.rs  lib.rs  main.rs
(+32 files in other folders)
